--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Drawing</h1>
     <h2>"The Backyard"</h2>
-    <img src = "assets/images/final drawing.jpg" height="500" width="1000" alt>
+    <img src = "Asset/Images/final drawing.jpg" height="500" width="1000" alt>
 
 </body>
 </html>
